[package]
name = "solana_trading_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
solana-program = { version = "2.1.2" }
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["full"] }
warp = "0.3"
serde = { version = "1.0" }
serde_json = "1.0"
solana-client = "2.1.2"
solana-sdk = "2.1.2"
urlencoding = "2.1"